Bug 45700 - Writer FILESAVE: validation of odt not passed ( Line table:number-columns-spanned="0" present)
Summary: Writer FILESAVE: validation of odt not passed ( Line table:number-columns-spa...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: All All
: low trivial
Assignee: Michael Stahl
URL:
Whiteboard: odf odf_validation target:3.7.0 targe...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-06 06:29 UTC by sasha.libreoffice
Modified: 2012-09-17 07:51 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test case (69.86 KB, application/vnd.oasis.opendocument.text)
2012-02-06 06:29 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2012-02-06 06:29:54 UTC
Created attachment 56674 [details]
test case

File not validated at http://odf-validator.rhcloud.com/

Error is:
EIR-WORD-2007.odt/content.xml[3505,114]: Error: attribute "table:number-columns-spanned" has a bad value: "0" does not satisfy the "positiveInteger" type

Source file is from here:
Bug 42450 - FILEOPEN: ooconvert crashes while processing docx file

LibO 3.5.0 beta 2
Comment 1 Joel Madero 2012-09-10 20:08:13 UTC
I was able to open this file just fine with 3.6.1.2. Formatting looks really wrong (probably a different bug) but no crash. Marking as WORKSFORME. If it's still not working for you reopen as UNCONFIRMED and provide your latest release you are trying on. Thanks
Comment 2 Joel Madero 2012-09-10 20:29:00 UTC
*** Bug 45895 has been marked as a duplicate of this bug. ***
Comment 3 sasha.libreoffice 2012-09-11 11:08:32 UTC
reproduced in 3.6.0 on Windows XP and 3.5.5 on Fedora 64 bit
Used file EIR-WORD-2007.docx from link. Then saved to odt, manually unzipped and line table:number-columns-spanned="0" found

can not test 3.6.1 on Fedora 64 bit because it always crashes
Comment 4 Michael Stahl 2012-09-14 13:05:45 UTC
the table in the source document can apparently not be imported correctly,
the columns aren't in the expected order in the document model.
there are various assertions from the ODF table export about that.

there is already a workaround for this in the ODF export filter but
it doesn't handle this particular document well so i've tweaked it
to write valid table:number-columns-spanned="1" for this document.
Comment 5 Not Assigned 2012-09-14 13:08:34 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c45c64e3de51d9f56c9d9789729b6f7952547a61

fdo#45700: sw ODF export: workaround corrupted table model:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 sasha.libreoffice 2012-09-14 13:58:15 UTC
Thanks for fixing this bug
Comment 7 Not Assigned 2012-09-14 20:33:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8803f997d0fd03a1b0ba06b99bea6b2ad1e2d3c0&g=libreoffice-3-5

fdo#45700: sw ODF export: workaround corrupted table model:


It will be available in LibreOffice 3.5.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Not Assigned 2012-09-17 07:51:50 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bcc65a92293fa8ad78c891c79ac433ff96767d82&g=libreoffice-3-6

fdo#45700: sw ODF export: workaround corrupted table model:


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.