fdo#45700: sw ODF export: workaround corrupted table model:

do not export invalid table:number-columns-spanned="0"

Change-Id: I7e286a9fcb6ed3df7222c83fe73e870e69561649